--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <a href="#" class="btn">PARI PROJEK</a>
       <a href="https://wa.me/628974263016" class="btn">📲 Chat Admin via WhatsApp</a>
       <a href="https://t.me/PariXhtml" class="btn">💬 Chat Admin via Telegram</a>
-      <a href="https://https://untukmucinta.netlify.app/" class="btn">CODD I LOVE YOU ..</a>
+      <a href="https://untukmucinta.netlify.app/" class="btn">CODD I LOVE YOU ..</a>
       <div class="thank-you">Terima kasih telah Mengunjungi Pari Webstore</div>
     </div>
   </div>
