--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <div class="button-container">
       <a href="https://wa.me/6285974263016" class="btn">📲 Chat Admin via WhatsApp</a>
       <a href="https://t.me/PariXhtml" class="btn">💬 Chat Admin via Telegram</a>
-      <a href="https://https://untukmucinta.netlify.app/" class="btn">CODD I LOVE YOU ..</a>
+      <a href=https://untukmucinta.netlify.app/" class="btn">CODD I LOVE YOU ..</a>
       <a href="https://github.com/pariNxt/parihtemel/blob/main/girlfriend.html" class="btn">CODE GIRLFIREND</a>
       <div class="thank-you">Terima kasih telah Mengunjungi Pari Webstore</div>
     </div>
