--- a/index.html
+++ b/index.html
@@ -140,13 +140,16 @@
       <img src="https://i.ibb.co/1XJxhh5/deppp.jpg" alt="PARIWEBSTORE">
     </div>
     <h1>PARI WEBSTORE.</h1>
-    <p class="subtitle">PARI DATA BACKUP </p>
+    <p class="subtitle">PARI BACKUP ALL CODE</p>
+
 
     <div class="button-container">
+      <a href="https://untukmucinta.netlify.app/" class="btn">CODD I LOVE YOU ..</a>
+      <a href="https://github.com/pariNxt/parihtemel/blob/main/girlfriend.html" class="btn">CODE  GIRLFIREND</a>
+      <a href="#" class="btn">PARI PROJEK</a>
+      <a href="#" class="btn">PARI PROJEK</a>
       <a href="https://wa.me/6285974263016" class="btn">📲 Chat Admin via WhatsApp</a>
       <a href="https://t.me/PariXhtml" class="btn">💬 Chat Admin via Telegram</a>
-      <a href="https://untukmucinta.netlify.app/" class="btn">CODD I LOVE YOU ..</a>
-      <a href="https://github.com/pariNxt/parihtemel/blob/main/girlfriend.html" class="btn">CODE GIRLFIREND</a>
       <div class="thank-you">Terima kasih telah Mengunjungi Pari Webstore</div>
     </div>
   </div>
