--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
 
 
     <div class="button-container">
-      <a href="https://untukmucinta.netlify.app/" class="btn">CODD I LOVE YOU ..</a>
+      <a href="https://untukmucinta.netlify.app/" class="btn">CODE I LOVE YOU ..</a>
       <a href="https://github.com/pariNxt/parihtemel/blob/main/girlfriend.html" class="btn">CODE  GIRLFIREND</a>
-      <a href="#" class="btn">PARI PROJEK</a>
+      <a href="https://t.me/+xmFrgiQQgHE1MDg1" class="btn">CH CODING TELE</a>
       <a href="#" class="btn">PARI PROJEK</a>
       <a href="https://wa.me/6285974263016" class="btn">📲 Chat Admin via WhatsApp</a>
       <a href="https://t.me/PariXhtml" class="btn">💬 Chat Admin via Telegram</a>
