--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <!-- Konten -->
   <div class="container">
     <div class="logo">
-      <img src="https://files.catbox.moe/8xkczv.webp" alt="PARIWEBSTORE">
+      <img src="https://files.catbox.moe/ttfgu0.jpg" alt="PARIWEBSTORE">
     </div>
     <h1>PARI WEBSTORE.</h1>
     <p class="subtitle">PARI BACKUP ALL CODE</p>
