--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <a href="https://untukmucinta.netlify.app/" class="btn">CODE I LOVE YOU ..</a>
       <a href="https://github.com/pariNxt/parihtemel/blob/main/girlfriend.html" class="btn">CODE  GIRLFIREND</a>
       <a href="https://t.me/+xmFrgiQQgHE1MDg1" class="btn">CH CODING TELE</a>
-      <a href="#" class="btn">PARI PROJEK</a>
+      <a href="https://parinxt.github.io/rahasia/" class="btn">KHUSUS NANA AND PAHRI</a>
       <a href="https://wa.me/6285974263016" class="btn">📲 Chat Admin via WhatsApp</a>
       <a href="https://t.me/PariXhtml" class="btn">💬 Chat Admin via Telegram</a>
       <div class="thank-you">Terima kasih telah Mengunjungi Pari Webstore</div>
